test/fixtures/errors/entry-point-error-loader-required.js
require("./emit-error-loader.js!./file");
